src/manifests/sparse-service/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparse-deployment
  namespace: inference
  labels: &id001
    app.kubernetes.io/name: sparse
    app.kubernetes.io/component: embedder
    app.kubernetes.io/managed-by: gen_sparse
    app.kubernetes.io/instance: sparse
    env: nonprod
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sparse
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels: *id001
    spec:
      serviceAccountName: sparse-sa
      containers:
      - name: sparse
        image: ghcr.io/athithya-sakthivel/sparse:2026-04-26-08-57--a0cce10@sha256:c399305b860bb2a6c0d91f4e8d70c28cc459d909edac6988bcc4cc2ab1a8b347
        ports:
        - containerPort: 8201
        livenessProbe:
          httpGet:
            path: /health
            port: 8201
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8201
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /readyz
            port: 8201
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 60
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: tmp-writable
          mountPath: /tmp
        - name: tmp-writable
          mountPath: /var/tmp
        - name: tmp-writable
          mountPath: /usr/tmp
        - name: models-cache
          mountPath: /models_cache
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
      volumes:
      - name: tmp-writable
        emptyDir: {}
      - name: models-cache
        emptyDir: {}
