src/manifests/sparse-service/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sparse-svc
  namespace: inference
  labels:
    app.kubernetes.io/name: sparse
    app.kubernetes.io/component: embedder
    app.kubernetes.io/managed-by: gen_sparse
    app.kubernetes.io/instance: sparse
    env: nonprod
spec:
  type: ClusterIP
  ports:
  - port: 8201
    targetPort: 8201
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: sparse
